100vh of body to 100dvh to fix the screen on mobile

--- a/css/navs.css
+++ b/css/navs.css
@@ -56,7 +56,7 @@ a {
 }
 
 .side-nav {
-  height: calc(100vh - 150px);
+  height: calc(100dvh - 150px);
   max-height: 100%;
   width: 300px;
   font-size: 3rem;
